# spice-v3

./: AUTHORS  CHANGELOG.md  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  meson.build
docs/: Makefile.in  spice_for_newbies.html  spice_protocol.html  spice_style.html  spice_threading_model.html  vd_interfaces.html
docs/manual/: Makefile.in  manual.html
docs/manual/manual.chunked/: apa.html  ar01s01.html  ar01s02.html  ar01s03.html  ar01s04.html  ar01s05.html  ar01s06.html  ar01s07.html  ar01s08.html  ar01s09.html  ar01s10.html  ar01s11.html  ar01s12.html  ar01s13.html  ar01s14.html  ar01s15.html  ar01s16.html  ar01s17.html  index.html
m4/: spice-compile-warnings.m4
server/: Makefile.in  dcc.h  gstreamer-encoder.c  memslot.c  memslot.h  reds-private.h  reds.cpp  safe-list.hpp  sound.cpp  spice-server-enums.c  spice-server-enums.h  spice-version.h
server/tests/: Makefile.am  Makefile.in  test-gst.cpp  test-leaks.c
server/tests/pki/: dhparams.pem
server/tests/valgrind/: spice.supp
subprojects/spice-common/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  meson.build  meson_options.txt  spice.proto  spice_codegen.py
subprojects/spice-common/common/: Makefile.am  Makefile.in  agent.c  agent.h  agent_interface.c  agent_interface.h  backtrace.c  backtrace.h  canvas_base.c  canvas_utils.c  client_marshallers.h  demarshallers.h  generated_client_demarshallers.c  generated_client_marshallers.c  generated_client_marshallers.h  generated_messages.h  generated_server_demarshallers.c  generated_server_marshallers.c  generated_server_marshallers.h  lines.c  log.c  lz.c  lz_compress_tmpl.c  lz_decompress_tmpl.c  marshaller.c  marshaller.h  mem.c  meson.build  messages.h  pixman_utils.c  quic.c  quic_family_tmpl.c  quic_tmpl.c  recorder.h  region.c  rop3.c  snd_codec.c  snd_codec.h  ssl_verify.c  ssl_verify.h  (+3 more)
subprojects/spice-common/docs/: Makefile.am  Makefile.in  meson.build  spice_protocol.txt  spice_uri_scheme.txt
subprojects/spice-common/m4/: common.m4  spice-deps.m4
subprojects/spice-common/python_modules/: Makefile.in  codegen.py  demarshal.py  marshal.py  ptypes.py  spice_parser.py
subprojects/spice-common/tests/: Makefile.am  Makefile.in  generated_test_demarshallers.c  generated_test_enums.h  generated_test_marshallers.c  generated_test_marshallers.h  generated_test_messages.h  helper-fuzzer-demarshallers.c  meson.build  test-dummy-recorder.c  test-logging.c  test-marshallers.c  test-marshallers.h  test-marshallers.proto  test-quic.c  test-region.c  test-ssl-verify.c  test-utils.c
tools/: Makefile.in
